--- a/ReadMe
+++ b/ReadMe
@@ -1,5 +1,10 @@
-1.We are using NLTK(Natural Language Toolkit) which is one of the powerful NLP library.
-2.Here we are using a pre-trained model which is trained using huge amount of datasets
-3.We provide the content of the mail as an input to this model for prediction
-4.Following are the
-    4.1.
+1 We are using NLTK(Natural Language Toolkit) which is one of the powerful NLP library.
+2 Here we are using a pre-trained model which is trained using huge amount of datasets
+3 We provide the content of the mail as an input to this model for prediction
+4 Load the model
+5 Input data will undergo the following pre-processing steps(Feature Engineering)
+    5.1 Punctuations removal
+    5.2 Lemmatization:Process converting a word into root word
+    5.3 Stop word removal(is,was,are....)
+    5.4 Data will be vectorized and saved (tf-idf:used for evaluating how important a word in a document)
+6 This vector is used for prediction
